# warc_parser

./: Cargo.toml  svgparser.rs
src/: main.rs  utils.rs
