[package]
name = "warc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warc = "0.3.1"
html_parser = "0.6.3"
lazy_static = "1.4.0"
regex = "1.5.5"
reqwest = {version = "0.11.10", features=["blocking"] }
libflate = { version ="1.2"}
num_cpus = "1.13.1"
threadpool = "1.8.1"
